# event-market

./: .env.example  .gitignore  Dockerfile  README.md  app.py  auth.py  db.py  event-sponsor-marketplace-clickable-prototype (2).html  fly.toml  flyio.md  notifications.py  package-lock.json  pyproject.toml  storage.py  theme.py
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/deal/: page.tsx
app/organiser/: page.tsx
app/sponsor/: page.tsx
components/layout/: LeftPanel.tsx  PanelHeader.tsx  ToastHost.tsx  Topbar.tsx
components/screens/: AdminScreen.tsx  DealScreen.tsx  HomeScreen.tsx  OrganiserScreen.tsx  SponsorScreen.tsx
lib/: catalogue.ts  constants.ts  demo-store.tsx  types.ts
migrations/: 001_init.sql
pages/: 1_event.py
streamlit-legacy/: .dockerignore  README.md  app.py
